# capstone

./: .gitignore  a.out  test.c
software/firmware/: CMakeCache.txt  CMakeLists.txt  CopyOfCMakeCache.txt  Makefile  adc.c  adc.h  adc_pos.h  cmake_install.cmake  display.c  display.h  firmware.code-workspace  font.h  gpio.c  keys.c  keys.h  main.c  midi.c  midi.h  midi_firmware.elf.map  midi_velocity_lut.h  pins.h  tusb_config.h  usb_descriptors.c
software/firmware/elf2uf2/src/ELF2UF2Build-stamp/: ELF2UF2Build-source_dirinfo.txt
software/firmware/elf2uf2/tmp/: ELF2UF2Build-mkdirs.cmake
software/firmware/pico-sdk/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/docs/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/boot_picoboot/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/boot_uf2/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/pico_base/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/pico_bit_ops/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/common/pico_divider/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
software/firmware/pico-sdk/tools/: Makefile  cmake_install.cmake
(+216 files in other folders)
